--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,139 +17,150 @@
     <link rel="stylesheet" href="/css/asciidoctor_pl2029.css">        
     <link rel="stylesheet" href="/css/fonts_pl2029.css">
     <link rel="stylesheet" href="/css/custom_pl2029.css">
+    {% if page.custom_nesting %}
+      <link rel="stylesheet" href="{{ site.baseurl }}/css/{{ page.custom_nesting }}.css">
+    {% endif %}
     <script src="/js/vendor/modernizr.js"></script>
+    <script src="/js/vendor/jquery.js"></script>
     <script src="/js/toc.js"></script>
     {% include head-custom.html %}
 </head>
 <body>
 
-<div id="flex-page">
   <header>
-    <div class="header-content">
+   <div class="header-content">
       <div id=site-name>
         <a href="https://projectliberty2029.github.io/">Project Liberty 2029 Wiki</a>
       </div>
 
       <div id="site-description">
-      {{ page.description | default: site.description | default: site.github.project_tagline }}
+      {{ page.description | default: site.description | default: site.github.project_tagline }}<br>
+      </div>
+      <div class="search-box">
+        <form action="https://duckduckgo.com/?q=search_term&atb=w" target="_blank" rel="noopener noreferrer">
+          <input type="text" name="q" placeholder="Search..." id="ddg-search-input">
+          <input type="hidden" name="sites" value="{{ site.url }}">
+          <input type="hidden" name="bext" value="ddgpage">
+          <button type="submit">Search</button>
+        </form>
       </div>
 
       <div id="banner">
-        <!-- Begin Buttons in Red Banner -->
-        <a class="button" href="https://ProjectLiberty2029.com", 
-            target="_blank" rel="noopener noreferrer">
+        <!-- Begin Btns in Red Bnr -->
+        <a class="button" href="https://ProjectLiberty2029.com" target="_blank" rel="noopener noreferrer">
           <strong>Videos & Essays on Substack &nbsp;</strong>
-          <div class="img-button"><img src="/content/media/images/icons/buttonimage_substack.png"></div>
+          <div class="img-button"><img src="/content/media/images/icons/buttonimage_substack.png" alt="Substack"></div>
         </a>
-        <a class="button" href="https://www.patreon.com/cw/ProjectLiberty2029", 
-            target="_blank" rel="noopener noreferrer">
+        <a class="button" href="https://www.patreon.com/cw/ProjectLiberty2029" target="_blank" rel="noopener noreferrer">
           <strong>Support This on Patreon &nbsp;</strong>
-          <div class="img-button"><img src="/content/media/images/icons/buttonimage_patreon.png"></div>
+          <div class="img-button"><img src="/content/media/images/icons/buttonimage_patreon.png" alt="Patreon"></div>
         </a>
-        <a class="button" href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io", 
-            target="_blank" rel="noopener noreferrer">
+        <a class="button" href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io" target="_blank" rel="noopener noreferrer">
           <strong>Help Improve This On GitHub &nbsp;</strong>
-          <div class="img-button"><img src="/content/media/images/icons/buttonimage_github.png"></div>
+          <div class="img-button"><img src="/content/media/images/icons/buttonimage_github.png" alt="GitHub"></div>
         </a>
-        <!-- End Buttons in Red Banner -->
-      </div><!-- end banner -->
-    </div> <!-- End of header-content -->
+        <!-- End Btns in Red Bnr -->
+      </div><!-- end bnr -->
+    </div> <!-- End of header-content --> 
   </header>
 
-  <!-- This div is for spacing and can be removed or used for styling. -->
-  <div>
-    <div id="content-spacer"></div>
-  </div> 
+  <div id="page-body">
 
-  <!-- Main content and sidebar Flexbox container -->
-  <div class="flex-columns-container">
-    <aside class="sticky-block">
-      <div class="nav-block">
-        {%- assign draft-status-list = "0, 00, 25, 50, 75, 100, 0%, 00%, 25%, 50%, 75%, 100%" | split: "," -%}
-        {% assign draft-status-list-stripped = draft-status-list | strip %}
-        {%- if draft-status-list-stripped contains page.draft_complete -%}
-          <span id="draft-status">  
-            <a href="/content/page_draft_status.html"><img src="{{ page.draft_complete | remove: '%' | prepend: '/content/media/images/icons/draft_complete_' | append: '.png' }}" 
-              alt="Draft Status Icon" > 
-              &nbsp;&nbsp;{{ page.draft_complete | remove: '%' | prepend: 'Draft Status: ' | append: '%'}}
-            </a>
-          </span>
-        {%- endif -%}
-        <br>
-        <br>
-        <h-toc>Table of Contents</h-toc>
-          {{ page.document | tocify_asciidoc : 7}}
-        <!-- Author(s) Block: -->
-        {% if page.authors.size >0 %}
-          <span id="author-list">
-          {% assign authors_list = page.authors | split: ", " %}        
-          {% if authors_list.size > 1 %}
-            <span class="font20_700i">Authors:</span><br>
-          {% else %}
-            <span class="font20_700i">Author:</span><br>
-          {% endif %}
-            {% for author in authors_list %}
-              &nbsp;&nbsp;{{ author | remove: ',' }}<br>
-            {% endfor %}
-          </span>
-        {% endif %}
-
-        <!-- To Do Block: -->
-        {% if page.todos.size > 0 %}
-          <div id="todo">
-            <span class="font20_700i">To-Do:</span><br>
-              {{ page.todos }}
+    <!-- Main content and sidebar Flexbox container -->
+    <div class="main-flex-container">
+      <!-- Begin Left Sidebar -->
+      <aside class="left-flex">
+        <div class="nav-block">
+          {%- assign draft-status-list = "0, 00, 25, 50, 75, 100, 0%, 00%, 25%, 50%, 75%, 100%" | split: "," -%}
+          {% assign draft-status-list-stripped = draft-status-list | strip %}
+          {%- if draft-status-list-stripped contains page.draft_complete -%}
+            <span id="draft-status">  
+              <a href="/content/page_draft_status.html"><img src="{{ page.draft_complete | remove: '%' | prepend: '/content/media/images/icons/draft_complete_' | append: '.png' }}" 
+                alt="Draft Status Icon"> 
+                &nbsp;&nbsp;{{ page.draft_complete | remove: '%' | prepend: 'Draft Status: ' | append: '%'}}
+              </a>
+            </span>
+          {%- endif -%}
+          <div class="toc-title">
+            Table of Contents
           </div>
-        {% endif %}
-      </div>
-    </aside>
+          <div class="tocify">
+            {{ page.document | tocify_asciidoc : 7}}
+          </div>
+          <!-- Author(s) Block: -->
+          {% if page.authors.size >0 %}
+            <span id="author-list">
+            {% assign authors_list = page.authors | split: ", " %}        
+            {% if authors_list.size > 1 %}
+              <span class="font20_700i">Authors:</span><br>
+            {% else %}
+              <span class="font20_700i">Author:</span><br>
+            {% endif %}
+              {% for author in authors_list %}
+                &nbsp;&nbsp;{{ author | remove: ',' }}<br>
+              {% endfor %}
+            </span>
+          {% endif %}
 
-    <!-- Main Blog Content -->
-    <main class="content-notsticky" role="content">
-      {{ content }}
-    </main>
-  </div>
+          <!-- To Do Block: -->
+          {% if page.todos.size > 0 %}
+            <span id="todo-list">
+              <span class="font20_700i">To-Do:</span><br>
+                {{ page.todos }}
+            </span>
+          {% endif %}
+        </div>
+      </aside>
+      <!-- End Left Sidebar -->
 
-  <!-- End Main Content and Sidebar -->
-  <!-- Footer --> 
-  <div class="footer-rows">
-     <br>
-    <hr>
-    <br>
-    <table style="border-color: transparent; background-color: transparent; ">
-      <tr>
-        <td class="footer-rows-image">
-          <img src="/content/media/images/icons/shareonblur200.png" alt="TorchOfLiberty" width="200" height="200">
-        </td>
-        <td class="footer-rows-text">
-          <p>All documents formatted and/or identified as Legislation are hereby donated to the public domain.<br>
-            All authors of such material on this site are hereby notified that work on Legislation shall be in the public domain.<br>
-            Thank you for your service! <br><br>
-            <span class="fonti">In the case of documents, unless otherwise noted in the document's header, footer, or front-matter,</span>
-            they may be assumed to be 
-            <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en", target="_blank" rel="noopener noreferrer">
-              shared under a CC 4.0 BY-SA deed.</a> 
-            <br><br>
-            <span class="fonti">In the case of other file types (images, pdfs, etc) check the directory containing the file for a licensing text file. Without explicit permissions, all such files should be assumed to be all rights reserved.
-            <br><br>
-            <span class="fonti">For CC 4.0 SA-BY, the suggested attribution is:</span> "Created by {author's names if known} for 
-            <a href="https://ProjectLiberty2029.com", target="_blank" rel="noopener noreferrer">ProjectLiberty2029.com</a> 
-            and 
-            <a href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io", target="_blank" rel="noopener noreferrer">
-              ProjectLiberty2029.github.io</a> <br><br>
-            Content included under "Source Documents" may be of mixed copyright status. Use caution before copying.<br>
-            If you learn of items that we should remove, please 
-            <a href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io/issues", target="_blank" rel="noopener noreferrer">
-              open an issue, explain the copyright, and we will remove asap.</a>
-          </p>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div>
-
+      <!-- Begin Main Content -->
+      <main class="right-flex">
+        <!-- Begin Right Pane, Main Body Content -->
+        <div class="right-content" role="content">
+          <div class="right-content-inner">
+            {{ content }}
+          </div> <!-- End Right-content-inner --> 
+          <div class="footer-rows">
+              <table style="border-color: transparent; background-color: transparent; ">
+                <tr>
+                  <td class="footer-rows-image">
+                    <img src="/content/media/images/icons/shareonblur200.png" alt="TorchOfLiberty" width="200" height="200">
+                  </td>
+                  <td class="footer-rows-text">
+                    <p>All documents formatted and/or identified as Legislation are hereby donated to the public domain.<br>
+                      All authors of such material on this site are hereby notified that work on Legislation shall be in the public domain.<br>
+                      Thank you for your service! <br><br>
+                      <span class="fonti">In the case of documents, unless otherwise noted in the document's header, footer, or front-matter,</span>
+                      they may be assumed to be 
+                      <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en" target="_blank" rel="noopener noreferrer">
+                        shared under a CC 4.0 BY-SA deed.</a> 
+                      <br><br>
+                      <span class="fonti">In the case of other file types (images, pdfs, etc) check the directory containing the file for a licensing text file. Without explicit permissions, all such files should be assumed to be all rights reserved.
+                      <br><br>
+                      <span class="fonti">For CC 4.0 SA-BY, the suggested attribution is:</span> "Created by {author's names if known} for 
+                      <a href="https://ProjectLiberty2029.com" target="_blank" rel="noopener noreferrer">ProjectLiberty2029.com</a> 
+                      and 
+                      <a href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io" target="_blank" rel="noopener noreferrer">
+                        ProjectLiberty2029.github.io</a> <br><br>
+                      Content included under "Source Documents" may be of mixed copyright status. Use caution before copying.<br>
+                      If you learn of items that we should remove, please 
+                      <a href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io/issues" target="_blank" rel="noopener noreferrer">
+                        open an issue, explain the copyright, and we will remove asap..</a>
+                    </p>
+                  </td>
+                </tr>
+              </table>
+          </div> <!-- End Footer -->
+        </div> <!-- End Right-Content -->
+        <!-- End Right Pane, Main Body Content -->
+      </main>
+      <!-- End Main Content-->
+    </div>
+    <!-- End Main Content and Sidebar -->
+    
+  </div> 
+  <!-- End of "page-body" -->
 <!-- These scripts are probably necessary for Asciidoctor to render properly -->
-<script src="/js/vendor/jquery.js"></script>
 <script src="/js/foundation.min.js"></script>
 <script>
 $(document).foundation();
