--- a/css/asciidoctor_pl2029.css
+++ b/css/asciidoctor_pl2029.css
@@ -1194,7 +1194,7 @@ table.tableblock>.title,
 .hdlist>.title {
   text-rendering: optimizeLegibility;
   text-align: left;
-  font-family: "Noto Serif", "DejaVu Serif", serif;
+  font-family: "LiberationSerif-Share", "Noto Serif", "DejaVu Serif", serif;
   font-size: 1rem;
   font-style: italic
 }
